--- a/Informe/Secciones/VIII_conclusiones.tex
+++ b/Informe/Secciones/VIII_conclusiones.tex
@@ -7,8 +7,8 @@
 %La utilización de un par complementario (\textit{Sziklai}) en vez de un \textit{Darlington} reduce notablemente la distorsión armónica. Pero en el cirucito \textit{Turner 730}, uno de los transistores de etapa de salida es \textit{Darlington}. Esta elección de diseño puede deberse a que en los años 70 los transistores \textit{NPN} y \textit{PNP} no presentaban tanta simetría como hoy en día.
 
 
-	\Juan{Actualizar con las mediciones}
-	En el presente informe se logró diseñar un amplificador de audio calse G alternativa, obteniéndose resultados por simulación similares a las especificaciones definidas. La comparación se resume en la Tabla \ref{tab.resultados}. La tensión máxima posible sin distorsión logró llegar a \SI{26.1}{\volt} por simulación, esto produce una potencia sobre la carga de \SI{42.25}{\watt}, por lo que se tiene cierta tolerancia con respecto a la potencia nominal especificada.
+	En el presente informe se logró diseñar un amplificador de audio clase G alternativa, obteniéndose resultados por simulación similares a las especificaciones definidas. La comparación se resume en la Tabla \ref{tab.resultados}. La tensión máxima posible sin distorsión logró llegar a \SI{26.1}{\volt} por simulación, esto produce una potencia sobre la carga de \SI{42.25}{\watt}, por lo que se tiene cierta tolerancia con respecto a la potencia nominal especificada.\\
+	\indent A su vez las mediciones realizadas los días \texttt{4/12/18} y \texttt{5/12/18} de las primeras 2 etapas coinciden con los valores obtenidos en el análisis preliminar.
 
 
 
