--- a/Informe/config.tex
+++ b/Informe/config.tex
@@ -5,7 +5,7 @@
 
 % Al comienzo de un TP se debe modificar los argumentos de los comandos
 
-\providecommand{\myTitle}{PROYECTO FINAL}
+\providecommand{\myTitle}{AVANCE DEL PROYECTO}
 \providecommand{\mySubtitle}{Amplificador de audio de potencia Clase G alternativa}
 
 \providecommand{\mySubject}{Diseño de Circuitos Electrónicos (86.10)}
