--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -67,8 +67,8 @@
 		\section{Fuentes conmutadas}
 			\input{III5_switching.tex}
 
-		\section{Características del amplificador}
-			\input{III6_caract.tex}
+%		\section{Características del amplificador}
+%			\input{III6_caract.tex}
 						
 %		\section{Polarización}\label{sec:pol}
 %			\input{III1_polarizacion.tex}
