Avance Listo | Se modificó el gráfico de polarización de medición

--- a/Informe/Secciones/VII2_valid.tex
+++ b/Informe/Secciones/VII2_valid.tex
@@ -7,12 +7,20 @@
 		\subsubsection{Polarización}
 		
 		Las mediciones de polarización se realizaron con el multímetro \emph{UT30D} cortocircuitando la entrada y se exponen en la Figura \ref{fig:51218_pol}. Cabe destacar que las mediciones en color rojo corresponden a tensiones con respecto a masa y aquellas en color azul, diferencia de potencial.
+		
 		\begin{figure}[h!]
 			\centering
-			\includegraphics[width=0.8\textwidth, trim = 2cm 14cm 4cm 1cm]{./Mediciones/1_mediciones.pdf}
+			\includegraphics[angle=-90, scale=0.6]{./Mediciones/1_mediciones.pdf}
 			\caption{Mediciones de polarización del día \texttt{4/12/2018}.}
 			\label{fig:51218_pol}
 		\end{figure}
+		
+		%\begin{figure}[h!]
+		%	\centering
+		%	\includegraphics[width=0.8\textwidth, trim = 2cm 14cm 4cm 1cm]{./Mediciones/1_mediciones.pdf}
+		%	\caption{Mediciones de polarización del día \texttt{4/12/2018}.}
+		%	\label{fig:51218_pol}
+		%\end{figure}
 
 		\subsubsection{Impedancia de entrada}
 			
