--- a/Informe/Secciones/VII1_instrumentos.tex
+++ b/Informe/Secciones/VII1_instrumentos.tex
@@ -7,3 +7,5 @@
 	\graficarPNG{0.3}{instru_UT30D}{Multímetro \emph{UT30D}.}{fig:UT30D}
 	\graficarPNG{0.3}{instru_FG_8002}{Generador de funciones \emph{FG 8002}.}{fig:FG_8002}
 	
+	% Para medir inductancias usamos PROTOMAX VA511
+	\graficarPNG{0.1}{instru_PROTOMAX_VA511}{Medidor de LCR portátil \emph{PROTOMAX VA511}.}{fig:VA511}
