--- a/Informe/Secciones/VII2_valid.tex
+++ b/Informe/Secciones/VII2_valid.tex
@@ -107,6 +107,11 @@
 
 		\HgraficarPNG{0.1}{./Mediciones/Maxima_excursion}{Medición de máxima excursión de salida sin recorte.}{fig:excursion_med}
 
+		\section{Cambios durante las mediciones}
+			Cortocircuitamos el inductor y la carga en su lugar posta.
+
+			Medicion slew rate: entramos con \SI{200}{\mV} y \SI{250}{\mV} y frecuencai \SI{1}{\kHz}.
+
 
 %		\subsubsection{Compensación}
 %
