--- a/Informe/Secciones/III1_etapa_salida.tex
+++ b/Informe/Secciones/III1_etapa_salida.tex
@@ -1,6 +1,6 @@
 	La etapa de salida clase G se caracteriza principalmente por el manejo eficiente de potencia debido a que conmuta la tensión de alimentación entre dos niveles según lo requiera la señal de entrada.
 
-	En la Figura \ref{fig.salida} se muestra un esquema básico de la topología, denominada clase G alternativa.  Los transistores $Q_1$ y $Q_2$ conforman la etapa interior que opera en clase B, siendo $Q_3$ y $Q_4$ los \textit{drivers} y $R_1$ la resistencia de emisor compartida. 
+	En la Figura \ref{fig.salida} se muestra un esquema básico de la topología, denominada clase G alternativa.  Los transistores $Q_63$ y $Q_64$ conforman la etapa interior que opera en clase B, siendo $Q_14$ y $Q_15$ los \textit{drivers} y sus resistencias de emisor compartidas. 
 
 	\begin{figure}[H]
 		\centering
@@ -9,9 +9,9 @@
 		\label{fig.salida}
 	\end{figure}
 
-	Los comparadores se encuentran conectados a la señal de entrada y a una tensión umbral $V_{th}$ de referencia. Cuando la señal de entrada excede la tensión $+V_{th}$, el comparador (superior) hace que los transistores $Q_5$ y $Q_6$ se polaricen en saturación. Es decir que actúan como una llave que activa la alimentación $V_{cc_H}$. A su vez el diodo $D_1$ quedará polarizado en inversa ya que la tensión en el cátodo es $+V_{cc_H}$, mayor que la tensión de ánodo $V_{cc_L}$. Por lo tanto, el circuito queda alimentado solo mediante $+V_{cc_H}$ y la potencia es manejada por dos transistores $Q_6$ y $Q_1$.
+	Los comparadores se encuentran conectados a la señal de entrada y a una tensión umbral $V_{th}$ de referencia. Cuando la señal de entrada excede la tensión $+V_{th}$, el comparador (superior) hace que los transistores $Q_16$ y $Q_62$ se polaricen en saturación. Es decir que actúan como una llave que activa la alimentación $V_{cc_H}$. A su vez el diodo $D_1$ quedará polarizado en inversa ya que la tensión en el cátodo es $+V_{cc_H}$, mayor que la tensión de ánodo $V_{cc_L}$. Por lo tanto, el circuito queda alimentado solo mediante $+V_{cc_H}$ y la potencia es manejada por dos transistores $Q_62$ y $Q_63$.
 
-	De forma análoga funcionan el comparador inferior, $Q_7$, $Q_8$ y $D_2$ para el semiciclo negativo de la señal de entrada. La salida se ilustra en la Figura \ref{fig.teo_salida}.
+	De forma análoga funcionan el comparador inferior, $Q_17$, $Q_65$ y $D_2$ para el semiciclo negativo de la señal de entrada. La salida se ilustra en la Figura \ref{fig.teo_salida}.
 
 
 	\HgraficarEPS{0.5}{salidaB}{Forma de la señal de salida, y tensiones umbrales}{fig.teo_salida}
@@ -21,11 +21,11 @@
 		\caption{Topología final de la etapa de salida.}
 		\label{fig.salida_2}
 	\end{figure}
-	Sin embargo, la topología propuesta en la Figura \ref{fig.salida} presenta un inconveniente. Cuando $Q_6$ entra en conducción, se produce una alteración repentina en la tensión $V_{CE}$ del transistor de potencia de salida $Q_1$, que por efecto Early también modifica la corriente de colector. Esta alteración afecta la ganancia, produciendo picos de tensión en la señal de salida. Esta alinealidad se elimina al conectar los transistores internos $Q_3$ y $Q_4$ a la tensión $+V_{cc_H}$ y $-V_{cc_H}$ respectivamente, según indica la Figura \ref{fig.salida_2}.
+	Sin embargo, la topología propuesta en la Figura \ref{fig.salida} presenta un inconveniente. Cuando $Q_62$ entra en conducción, se produce una alteración repentina en la tensión $V_{CE}$ del transistor de potencia de salida $Q_1$, que por efecto Early también modifica la corriente de colector. Esta alteración afecta la ganancia, produciendo picos de tensión en la señal de salida. Esta alinealidad se elimina al conectar los transistores internos $Q_14$ y $Q_15$ a la tensión $+V_{cc_H}$ y $-V_{cc_H}$ respectivamente, según indica la Figura \ref{fig.salida_2}.
 
 \subsection{Multiplicador de $V_{BE}$}
 
-	Las tensiones $V_{bias1}$ y $V_{bias2}$ permiten \textit{prepolarizar} a los transistores $Q_1$ y $Q_2$ con el fin de atenuar la distorsión de cruce por cero característica del clase B. Se deben ajustar de forma tal que la corriente de la malla de salida sea aproximadamente igual en el colector de ambos transistores ($Q_1$ y $Q_2$). Asimismo se debe considerar que si $I_{CQ}$ es muy elevada se desperdicia potencia, y si es muy pequeña se obtendrá una distorsión de cruce por cero apreciable. Ambas tensiones se implementaron con un multiplicador de $V_{BE}$ cuyo circuito se presenta en la Figura \ref{fig.multiplicador}.
+	Las tensiones $V_{bias1}$ y $V_{bias2}$ permiten \textit{prepolarizar} a los transistores $Q_63$ y $Q_64$ con el fin de atenuar la distorsión de cruce por cero característica del clase B. Se deben ajustar de forma tal que la corriente de la malla de salida sea aproximadamente igual en el colector de ambos transistores ($Q_63$ y $Q_64$). Asimismo se debe considerar que si $I_{CQ}$ es muy elevada se desperdicia potencia, y si es muy pequeña se obtendrá una distorsión de cruce por cero apreciable. Ambas tensiones se implementaron con un multiplicador de $V_{BE}$ cuyo circuito se presenta en la Figura \ref{fig.multiplicador}.
 
 	\begin{figure}[H]
 		\centering
@@ -37,19 +37,19 @@
 
 	\begin{equation}
 		\centering
-		V_M = \left( \frac{R_{1M}}{R_{1M} + R_{2M}} +1 \right) \cdot V_{BE} - I_C \cdot R_{3M} \approx  \left( \frac{R_{1M}}{R_{1M} + R_{2M}} +1 \right) \cdot V_{BE}
+		V_M = \left( \frac{R_{43}}{R_{43} + R_{44}} +1 \right) \cdot V_{BE} - I_C \cdot R_{42} \approx  \left( \frac{R_{43}}{R_{43} + R_{44}} +1 \right) \cdot V_{BE}
 	\end{equation}
 
 	 Considerando un valor de $V_{BE} \approx \SI{0.5}{\volt}$
 
 	 \begin{equation}
 	 	\centering
-		\frac{\SI{2.2}{\volt}}{\SI{0.5}{\volt}} -1 = \frac{R_{1M}}{R_{2M}} \implies \boxed{R_{1M} = \num{3,4} \cdot R_{2M}}
+		\frac{\SI{2.2}{\volt}}{\SI{0.5}{\volt}} -1 = \frac{R_{43}}{R_{44}} \implies \boxed{R_{43} = \num{3,4} \cdot R_{44}}
 	\end{equation}
 
-	Se eligen los resistores comerciales $R_{1M} = \SI{3.3}{\kilo\ohm}$, $R_{2M} = \SI{680}{\ohm}$ y un potenciómetro de $\SI{1}{\kilo\ohm}$. 
+	Se eligen los resistores comerciales $R_{43} = \SI{3.3}{\kilo\ohm}$, $R_{44} = \SI{680}{\ohm}$ y un potenciómetro de $\SI{1}{\kilo\ohm}$. 
 
-	La resistencia $R_{3M}$ se anexa para mejorar la independencia de la tensión $V_{CE}$ con la corriente de polarización. Asimismo se agrega un capacitor $C_M$ para no alterar el comportamiento del resto circuito en señal, es decir que se obtiene una impedancia pequeña para un amplio rango de frecuencias. 
+	La resistencia $R_{42}$ se anexa para mejorar la independencia de la tensión $V_{CE}$ con la corriente de polarización. Asimismo se agrega un capacitor $C_M$ para no alterar el comportamiento del resto circuito en señal, es decir que se obtiene una impedancia pequeña para un amplio rango de frecuencias. 
 	
 \subsection{Compensación del embalamiento térmico}
 
@@ -111,13 +111,13 @@
 	\begin{align}
 		\centering
 		\Delta V_{Re} &= \SI{0.33}{\ohm} \cdot \SI{5}{\ampere} = \SI{1.65}{\volt} \\
-		\SI{0.6}{\volt} &= \frac{R_1}{ R_1 + R_2 } \cdot \SI{1.65}{\volt} \implies \boxed{R_2 = \num{1,8} \: R_1}
+		\SI{0.6}{\volt} &= \frac{R_60}{ R_60 + R_59 } \cdot \SI{1.65}{\volt} \implies \boxed{R_59 = \num{1,8} \: R_60}
 	\end{align}
 
 		
 
 \subsection{Fuente de corriente}
-	De la sección anterior se sabe que $I_{O_{\max}}=\SI{3.5}{\A}$. Al tratarse de transistores de potencia, el factor $\beta$ se encuentra entre 30 y 50, por lo que la corriente de base en $Q_1$ sería $I_{B,Q1} \approx \SI{100}{\milli\ampere}$. Dicha corriente es entregada por $Q_3$, siendo la corriente de base $I_{B,Q2} \approx \SI{2}{\milli\ampere}$. A su vez la fuente polariza la etapa amplificadora de tensión (VAS), por lo que se considerará al menos un cuarto más de dicha corriente. Se propone $I_{pol} = \SI{5}{\milli\ampere}$.
+	De la sección anterior se sabe que $I_{O_{\max}}=\SI{3.5}{\A}$. Al tratarse de transistores de potencia, el factor $\beta$ se encuentra entre 30 y 50, por lo que la corriente de base en $Q_63$ sería $I_{B,Q63} \approx \SI{100}{\milli\ampere}$. Dicha corriente es entregada por $Q_14$, siendo la corriente de base $I_{B,Q14} \approx \SI{2}{\milli\ampere}$. A su vez la fuente polariza la etapa amplificadora de tensión (VAS), por lo que se considerará al menos un cuarto más de dicha corriente. Se propone $I_{pol} = \SI{5}{\milli\ampere}$.
 
 	\begin{figure}[H]
 		\centering
@@ -128,11 +128,11 @@
 
 \begin{equation}
 	\centering
-	R_1 = \frac{\SI{30}{\volt} - V_{BE, <on>} }{ I_{pol} }
+	R_6 = \frac{\SI{30}{\volt} - V_{BE, <on>} }{ I_{pol} }
 	\label{ec.ipol}
 \end{equation}
 
-La corriente de polarización queda determinada por la resistencia $R_1$ de la Ecuación \ref{ec.ipol}. Considerando un $V_{BE,on} = \SI{0.5}{\volt}$ se obtiene $R_1 = \SI{100}{\ohm}$. Por otra parte se despreció la caída de tensión por $R_2$. Dicha resistencia se anexa con el fin de limitar la corriente de base que pasa de un transistor a otro.
+La corriente de polarización queda determinada por la resistencia $R_6$ de la Ecuación \ref{ec.ipol}. Considerando un $V_{BE,on} = \SI{0.5}{\volt}$ se obtiene $R_6 = \SI{100}{\ohm}$. Por otra parte se despreció la caída de tensión por $R_5$. Dicha resistencia se anexa con el fin de limitar la corriente de base que pasa de un transistor a otro.
 
 
 \subsection{Comparadores}
@@ -151,15 +151,15 @@ La corriente de polarización queda determinada por la resistencia $R_1$ de la E
 
 \begin{equation}
 	\centering
-	V_{th}' = V_{th} \cdot \frac{R_4}{R_4 + R_3} \implies \SI{1.5}{\volt} = \SI{12}{\volt} \cdot \frac{R_4}{R_4 + R_3} \implies \boxed{R_3 = 7 \cdot R_4}
+	V_{th}' = V_{th} \cdot \frac{R_63}{R_63 + R_64} \implies \SI{1.5}{\volt} = \SI{12}{\volt} \cdot \frac{R_63}{R_63 + R_64} \implies \boxed{R_64 = 7 \cdot R_63}
 \end{equation}
 
 \begin{equation}
 	\centering
-	V_o' = V_o \cdot \frac{R_2}{R_2 + R_1} \implies \SI{2}{\volt} = \SI{12}{\volt} \cdot \frac{R_2}{R_2 + R_1} \implies \boxed{R_1 = 5 \cdot R_2}
+	V_o' = V_o \cdot \frac{R_62}{R_62 + R_61} \implies \SI{2}{\volt} = \SI{12}{\volt} \cdot \frac{R_62}{R_62 + R_61} \implies \boxed{R_61 = 5 \cdot R_62}
 	\end{equation}
 
-	El valor de la resistencia de emisor $R_{ec}$ se elige en función de la máxima tensión posible en $V_o$ y la corriente que circularía en reposo. Con $R_{ec} = \SI{500}{\ohm}$ se obtiene:
+	El valor de la resistencia de emisor $R_{51}$ se elige en función de la máxima tensión posible en $V_o$ y la corriente que circularía en reposo. Con $R_{51} = \SI{500}{\ohm}$ se obtiene:
 
 	\begin{equation}
 		\centering
