--- a/Informe/Secciones/V1_compensacion.tex
+++ b/Informe/Secciones/V1_compensacion.tex
@@ -1,3 +1,4 @@
+	\Juan{Podríamos poner algo así como que ésto lo hicimos para COMPROBAR que el valor elegido era el correcto.}
 Para hallar el valor del capacitor de compensación (presente entre la base y colector del transistor de VAS), se impone una señal cuadrada en la entrada y se observa como resulta la salida. Se realizó una simulación al variar el valor de la capacidad desde \SI{100}{\pico\farad} (curva naranja) hasta \SI{400}{\pico\farad} (curva celeste) de a \SI{100}{\pico\farad}. El resultado se muestra en la Figura \ref{fig:var_cap}.
 
 
