--- a/Informe/Secciones/VII2_valid.tex
+++ b/Informe/Secciones/VII2_valid.tex
@@ -121,7 +121,32 @@
 			Con el fin de obtener un valor bajo de THD, se ajustó el potenciómetro del multiplicador de $V_{BE}$, obtenéndose los siguientes valores
 
 		\subsubsection{Máxima excursión}
+		Se introdujo una señal de amplitud (máxima) tal que la salida no recorte. Dicha señal corresponde a una
+		de amplitud pico a pico 2.14 $V_{pp}$. A la salida se obtiene $V_{pp}$ = 50 V.
 
+		\begin{figure}[h!]
+			\centering
+			\includegraphics[scale=0.1]{Mediciones/PotenciaMaxima.jpg}
+			\caption{Medición de máxima excursión de salida antes del recorte.}
+			\label{fig:MaxExcur}
+		\end{figure}
+
+		\subsubsection{Variación de la fuente}
+		Al variar la fuente de alimentación entre -25 y 33 V, se miden los distintos puntos de polarizacion, tal que las corrientes de polarización no varien mas de un 10 por ciento.
+		\begin{table}[]
+		\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|}
+		\hline
+		Vcc{[}V{]} & -Vcc{[}V{]} & A{[}V{]} & B{[}V{]} & C{[}V{]} & D{[}V{]} & E{[}V{]} & F{[}mV{]} & G{[}mV{]} & H{[}V{]} & I{[}mV{]} \\ \hline
+		30.11      & 30          & 12.36    & 1.369    & -29.07   & 1.31     & -1.275   & 27.3      & 11.8      & 29.43    & 10.6      \\ \hline
+		31.24      & 30.99       & 12.39    & 1.364    & -29.68   & 1.308    & -1.271   & 25.5      & 7.6       & 28.12    & 10.5      \\ \hline
+		32.71      & 32.56       & 12.4     & 1.362    & -31.24   & 1.310    & -1.275   & 27.2      & 10.6      & 32.06    & 10.6      \\ \hline
+		24.98      & 25          & 12.06    & 1.358    & -23.69   & 1.309    & -1.270   & 24.6      & 6.3       & 24.37    & 9.9       \\ \hline
+		26.99      & 27.02       & 12.18    & 1.363    & -25.7    & 1.309    & 1.27     & 26.1      & 9.6       & 26.37    & 10.3      \\ \hline
+		28.39      & 28.18       & 12.25    & 1.363    & -26.86   & 1.311    & -1.27    & 27.1      & 10.2      & 27.75    & 9.2       \\ \hline
+		29.21      & 29.13       & 12.29    & 1.363    & -27.82   & 1.311    & -1.275   & 26.2      & 10.4      & 28.58    & 9.3       \\ \hline
+		\end{tabular}
+		\end{table}
+		\Gus{hay que calcular las corrientes y sus variaciones y poner los puntos A B C .... en xcircuit que estaban marcados}
 		\subsubsection{Distorsión total armónica}
 
 		El banco de medición para la distorsión total armónica se muestra en la figura \ref{fig:thd_bco}. Los valores se obtuvieron mediante el software \textit{SpectraPlus}. Se utilizó la placa de audio de la PC para generar la señal, ya que un generador de laboratorio presenta un valor elevado de \texttt{THD}. Asimismo es necesario utilizar un atenuador resistivo debido a que la PC no admite como entrada un valor mayor a 1Vrms. 
@@ -174,23 +199,49 @@
 			\end{table}
 			\Flor{Valores para 100 y 5kHz como la simulación. Tambien está 60 7k hecha}
 
+
+
+		\subsubsection{Slew-Rate y Ancho de banda de Potencia}
+		Se mide a maxima potencia a $1Khz$ y se calcula la pendiente a la salida que se genera por la respuesta al escalón.
+		\Gus{Fotoo , mañana}
+
+		\begin{equation*}
+			SR  = \frac{\varDelta v}{\varDelta t} = 7.4 \frac{V}{us}
+		\end{equation*}
+
 		\subsubsection{Eficiencia}
 
 		\subsubsection{Relación Señal a Ruido}
-			\begin{figure}[H]
-				\centering
-				\includegraphics[scale=0.3]{./Figuras/SNR_1K_1W.jpg}
-			\end{figure}
+		Para realizar la medición de la SNR se utilizó el programa Spectra Plus en el cual se midio con ruido blanco para geerar el piso que presenta la placa de sonido y luego se generó una señal a $1KHz$ y $1W$ midiendo la salida con el banco de medición de la Figura \ref{fig:thd_bco} .
 
-			\begin{figure}[H]
-				\centering
-				\includegraphics[scale=0.3]{./Figuras/SNR_1K_1W_imagen2.jpg}
-			\end{figure}
+
 
 			\begin{figure}
 				\centering
-				\includegraphics[scale=0.3]{./Figuras/ruido_balnco.jpg}
+				\includegraphics[scale=0.6]{./Figuras/ruido_balnco.jpg}
+			\caption{Piso de ruido.}
 			\end{figure}
+
+			\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.6]{./Figuras/SNR_1K_1W_imagen2.jpg}
+			\caption{Salida a 1 W y 1 Khz.}
+			\end{figure}
+
+
+			Calculando:
+
+			\begin{equation*}
+			SNR_{db}  = 20 \dot log(\frac{V_{ruido}}{V_o}) = V_{ruido_{dB}} - V_{o_{dB}}
+			\end{equation*}
+
+			Por lo tanto: 
+
+			\begin{equation*}
+			SNR_{db}  = 98.75 - 8.21 = 90.54 dB  
+			\end{equation*}
+
+
 %		
 %		\subsubsection{Rechazo de Ruido de la Fuente de Alimentación}
 %
